src/assets/css/_actor.scss
@use 'variables';

.actor-details {
    display: flex;
    gap: 24px;

    @media screen and (max-width: 768px) {
        flex-direction: column;
    }

    &__container {
        max-width: variables.$container-width;
        margin: 0 auto;
        padding: 0 1rem;
    }

    &__image {
        display: flex;
        width: 300px;
        height: 450px;

        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
        }

        @media screen and (max-width: 368px) {
            width: 100%;

            img {
                width: 100%;
                height: auto;
            }
        }
    }

    &__infos {
        display: flex;
        flex-direction: column;
        gap: 8px;
        margin-bottom: 24px;

        &-name {
            font-weight: 500;
            font-size: 30px;
        }

        &-birthday {
            font-weight: 500;
        }
    }

    &__right {
        max-width: 680px;
    }

    &__left {
        display: flex;
        flex-direction: column;
        gap: 30px;
    }

    &__biography {
        display: flex;
        flex-direction: column;
        gap: 8px;

        &-title {
            font-weight: 500;
            font-size: 20px;
        }
    }

    &__movies {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        margin-top: 50px;
        margin-bottom: variables.$space-bottom;

        &-list {
            display: flex;
            flex-wrap: wrap;
            gap: 20px;
        }

        &-title {
            font-weight: 500;
            font-size: 20px;
        }
    }

    &__personalinfo {
        display: flex;
        flex-direction: column;

        &-title {
            margin-bottom: 8px;
            font-size: 20px;
            font-weight: 500;
        }

        &-items {
            display: flex;
            flex-direction: column;
            gap: 20px;
        }

        &-item {
            display: flex;
            flex-direction: column;
            gap: 4px;
        }

        &-item-title {
            font-weight: 500;
        }
    }
}

